cosmos_ws/log/build_2024-04-07_15-04-51/communication_pkg/stderr.log
  File "/home/vini_dunker/COSMOS-AFS/cosmos_ws/install/communication_pkg/lib/python3.10/site-packages/communication_pkg/SerialCommunication.py", line 45
    if(msg.from_node != "SerialCommunication")
                                              ^
SyntaxError: expected ':'

